fixed a lot of spacing issues and a few spelling errors changed from user dashboard to the user on sessions name

--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -10,6 +10,10 @@
   }
 }
 .fade-in {
-  margin-left: 10px;
-  margin-right: 10px;
+  /* margin-left: 10px;
+  margin-right: 10px; */
+}
+
+.set-size {
+  max-width: 70px;
 }
